@@ -1,3 +1,15 @@
+2012-08-07  Mikael Djurfeldt  <mdj@ubuntu-11.10>
+
+	* runtime.cc (runtime.cc): Disable deletion of ports.
+
+2012-08-03  Mikael Djurfeldt  <mdj@ubuntu-11.10>
+
+	* configure.ac: Updated to version 1.1.0.
+
+	* configure.ac: Generate music/version.hh.in.
+
+	* music/version.hh.in: New file.
+
 2011-01-31  Mikael Djurfeldt  <mdj@djurfeldt.com>
 
 	* Makefile.am (libmusic_c_la_DEPENDENCIES): Added in order to
